--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myob",
   "version": "1.0.0",
-  "description": "\"pre-interview technical test\"",
+  "description": "pre-interview technical test",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/shas38/myob/issues"
   },
-  "homepage": "https://github.com/shas38/myob#readme"
+  "homepage": "https://github.com/shas38/myob#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "git-rev-sync": "^1.12.0"
+  }
 }
