--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "pre-interview technical test",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "mocha ./tests"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "git-rev-sync": "^1.12.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2",
+    "supertest": "^4.0.2"
   }
 }
